# PdfPilot

./: .gitignore  .replit  README.md  app.py  case_manager.py  chat_handler.py  global_search.py  image_processor.py  legal_analyzer.py  memory_handler.py  ocr_handler.py  pdf_processor.py  pyproject.toml  replit.md  report_generator.py  violation_detector.py
